package view;

import javax.swing.*;

public class PanelPersonaje extends JPanel {
    private MainFrame frame;

    public PanelPersonaje(MainFrame frame) {
        this.frame = frame;
    }
}
